<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".screens.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="ĐĂNG KÝ TÀI KHOẢN"
                android:textAlignment="center"
                android:textColor="#3d1a00"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <!--Parent name-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_reglname"
                        style="@style/customTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editlastname"
                            style="@style/modifiedEditText"
                            android:autofillHints=""
                            android:drawableStart="@drawable/ic_baseline_fullname"
                            android:drawablePadding="10dp"
                            android:hint="@string/register_lastname"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--First Name-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regfname"
                        style="@style/customTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editfisrtname"
                            style="@style/modifiedEditText"
                            android:autofillHints=""
                            android:drawableStart="@drawable/ic_baseline_fullname"
                            android:drawablePadding="10dp"
                            android:hint="@string/register_firstname"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Gender-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_reggender"
                        style="@style/parent">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="27dp"
                                android:layout_marginRight="27dp"
                                android:drawablePadding="10dp"
                                android:text="Giới tính"
                                android:textStyle="bold"
                                android:textSize="16sp" />

                            <RadioButton
                                android:id="@+id/rbnam"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="20sp"
                                android:text="Nam" />

                            <RadioButton
                                android:id="@+id/rbnu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Nữ" />

                        </RadioGroup>

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Birthday-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regbirthday"
                        style="@style/customTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editabirthday"
                            style="@style/modifiedEditText"
                            android:autofillHints=""
                            android:drawableStart="@drawable/ic_baseline_calendar"
                            android:drawablePadding="10dp"
                            android:hint="@string/register_birthday"
                            android:inputType="date"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <!--Address-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regaddress"
                        style="@style/customTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editaddress"
                            style="@style/modifiedEditText"
                            android:autofillHints=""
                            android:drawableStart="@drawable/ic_baseline_location_on_24"
                            android:drawablePadding="10dp"
                            android:hint="@string/register_address"
                            android:inputType="text"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Phone number-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regphone"
                        style="@style/customTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editphone"
                            style="@style/modifiedEditText"
                            android:autofillHints=""
                            android:drawableStart="@drawable/ic_baseline_phone"
                            android:drawablePadding="10dp"
                            android:hint="@string/register_phonenumber"
                            android:inputType="phone"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--EMAIL-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regemail"
                        style="@style/customTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:autofillHints=""
                            android:drawableStart="@drawable/ic_baseline_email"
                            android:drawablePadding="10dp"
                            android:hint="@string/register_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <!--Password-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regpass"
                        style="@style/customTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/regpass"
                            style="@style/modifiedEditText"
                            android:autofillHints=""
                            android:drawableStart="@drawable/ic_baseline_password"
                            android:drawablePadding="10dp"
                            android:hint="@string/register_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Rewrite password-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regrepass"
                        style="@style/customTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/regrepass"
                            style="@style/modifiedEditText"
                            android:autofillHints=""
                            android:drawableStart="@drawable/ic_baseline_password"
                            android:drawablePadding="10dp"
                            android:hint="@string/register_repassword"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:background="@drawable/bg_signin"
                        android:gravity="center"
                        android:paddingVertical="12dp"
                        android:text="Đăng ký"
                        android:textColor="#fefae0"
                        android:textSize="18sp"
                        android:textStyle="bold" />



                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="onLoginClick"
                        android:text="Đã có tài khoảng? Đăng nhập ngay!"
                        android:textAlignment="center"
                        android:textColor="#a86a24"
                        android:textSize="17sp"
                        android:paddingVertical="10dp"
                        android:textStyle="italic|bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
